--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^11.1.0"
+		"mocha": "^11.1.0",
+		"mongodb": "^6.13.0",
+		"mongoose": "^8.9.6",
+		"nodemon": "^3.1.9"
 	},
 	"repository": {
 		"type": "git",
